--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Practicando nodejs con Lite Serve",
   "main": "index.html",
   "scripts": {
+    "dev": "lite-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/Js-Alvarez/Guia-de-Hoteles/issues"
   },
-  "homepage": "https://github.com/Js-Alvarez/Guia-de-Hoteles#readme"
+  "homepage": "https://github.com/Js-Alvarez/Guia-de-Hoteles#readme",
+  "dependencies": {
+    "bootstrap": "^5.2.2",
+    "jquerry": "^0.0.1-security",
+    "lite-server": "^2.6.1",
+    "popper.js": "^1.16.1",
+    "save": "^2.9.0"
+  }
 }
